refactoring so that central cert is used, and the header and footer are centralized. Also uses center alignment for all components

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 HTTPS=true
 PORT=3000
-SSL_CRT_FILE=./src/Certificates/cert.pem 
-SSL_KEY_FILE=./src/Certificates/key.pem
+SSL_CRT_FILE=C:/Users/j22va/Desktop/Certificates/cert.pem 
+SSL_KEY_FILE=C:/Users/j22va/Desktop/Certificates/key.pem
